<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_playhis"
        android:icon="@mipmap/ic_history_24dp"
        android:orderInCategory="80"
        android:title="@string/playhis"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search_24dp"
        android:orderInCategory="90"
        android:title="@string/search"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_grade"
        android:icon="@mipmap/ic_grade_24dp"
        android:orderInCategory="100"
        android:title="@string/grade"
        app:showAsAction="ifRoom" />
</menu>